# JZ_Tools

./: .gitignore
data/: SRR25660662.genes.results  SRR25660668.genes.results  merge_rsem_count.csv  merge_rsem_fpkm.csv  merge_rsem_tpm.csv  sample.csv
docs/: iTerm2.json
logger_plugin/: EXAMPLE_USAGE.md  README.md  __init__.py  config_with_logger.yaml  logger.py  setup.py
scripts/Tissue-specific-genes/: identify_extended_tau.R
scripts/md5/: README.md  check_md5.py
src/ATACTools/: gtf2tssbed.sh
src/ATACTools/filter_pe/: Cargo.toml  README.md
src/ATACTools/filter_pe/src/: main.rs
src/ATACTools/idr/: run_idr_oop.py
src/ATACTools/idr/test/: Bud-1_peaks.narrowPeak  Bud-2_peaks.narrowPeak  Bud-3_peaks.narrowPeak
src/ATACTools/tools/: README.md  gtf2tss.py  merge_peaks.py
src/ATACTools/tools/generate_atac_matrix/: generate_atac_matrix.py
src/DEG/: README.md  atac_deseq2_pipeline.r  gtf2tsv.md  gtf2tsv.py  gtf2tsv.r  run_deseq2.r  run_dist.r  run_pheatmap.r  run_plotly_heatmap.py
src/Enrichments/: ITAG4.0_goterms.txt  deg_enrich_wrapper.py  ful2_mbp20_sIM_vs_WT_sIM_DEG.csv  ful2_mbp20_sIM_vs_WT_sIM_DOWN.csv  ful2_mbp20_sIM_vs_WT_sIM_UP.csv  go_enrich.py  go_enricher.r  requirments.yaml
src/Enrichments/python/: README.md  go_enrich.py
src/GFFconvert/: gff2tsv.py
src/GO_Annotation/: MGI_gaf_parser.py  README.md  UniProt_GAF.md  uniprot_gaf_converter_v2.py
src/data-deliver/RNAFlow_Deliver_Tool/: Cargo.toml  LICENSE  README.md  README_merge.md  pyproject.toml
src/data-deliver/RNAFlow_Deliver_Tool/config/: README.md  as_config.yaml  count_config.yaml  deg_config.yaml  delivery_config.yaml  full_delivery_config.yaml  fusion_config.yaml  mapping_config.yaml  qc_summary_config.yaml  report.yaml  variant_config.yaml
src/data-deliver/RNAFlow_Deliver_Tool/python/RNAFlow_Deliver/: cli.py  qc_summary.py
src/data-deliver/RNAFlow_Deliver_Tool/python/RNAFlow_Deliver/modules/: config.py  deliver.py  merge.py  qc.py
src/data-deliver/RNAFlow_Deliver_Tool/rnaflow-deliver-tool/: meta.yaml
src/data-deliver/RNAFlow_Deliver_Tool/src/: lib.rs  main.rs
src/data-deliver/data_deliver/: Cargo.toml  README.md
src/data-deliver/data_deliver/src/: cloud.rs  config_manager.rs  main.rs
src/fastq_screen/: fastq_screen.conf  validate_fastq_screen.py
src/gene_matrix/: README.md  merge_rsem.py  qc_rsem_ultimate.py
src/genome_tools/het/: cal_ho_he.py
src/library_type/: check_libtype.py
src/logger_plugin/: .gitignore  LICENSE  README.md  example_analysis_script.py  pyproject.toml  repro_progress.py  repro_progress_v2.py  reproduce_issue.py  test_regex.py
src/logger_plugin/snakemake_logger_plugin_rich_loguru/: __init__.py  loki_utils.py  notification_utils.py  utils.py
src/logger_plugin/tests/: Snakefile  config.yaml  monitor_config.yaml  test_loki_utils.py  test_notification_utils.py
src/logger_plugin/tests/.snakemake/metadata/: Z2VuX2RvbmVfc2FtcGxlMS5mbGFn  Z2VuX2RvbmVfc2FtcGxlMi5mbGFn  Z2VuX2RvbmVfc2FtcGxlMy5mbGFn  bWVyZ2VfZG9uZS5mbGFn  cHJvY19kb25lX3NhbXBsZTEuZmxhZw==  cHJvY19kb25lX3NhbXBsZTIuZmxhZw==  cHJvY19kb25lX3NhbXBsZTMuZmxhZw==
src/md5/: README.md
src/md5/Compile_release/json_md5_verifier_x86_64/release/: json_md5_verifier.d
src/md5/Compile_release/json_md5_verifier_x86_64/release/.fingerprint/json_md5_verifier-139c9d0e9aba2baa/: bin-json_md5_verifier  bin-json_md5_verifier.json
src/md5/Compile_release/seq_preprocessor_x86_64/release/: seq_preprocessor  seq_preprocessor.d
src/md5/json_md5_verifier/: Cargo.toml
src/md5/json_md5_verifier/src/: main.rs
src/md5/seq_preprocessor/: Cargo.toml  README.md
src/md5/seq_preprocessor/src/: main.rs
src/rMATS/: merge_rmats_summary.py
src/software_manager/: README.md  get_versions.py  software_list.yaml
(+3 files in other folders)
