[package]
name = "filter_pe"
version = "0.3.0"
edition = "2021"

[dependencies]
rust-htslib = "0.44"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
indicatif = "0.17"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"