[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rnaflow-deliver-tool"
version = "0.1.1"
description = "RNAFlow QC Summary tool with Rust acceleration"
requires-python = ">=3.8"
license = {text = "CC BY-NC 4.0"}
dependencies = [
    "pandas>=1.3",
    "rich>=10.0",
    "loguru>=0.5",
    "pyyaml>=5.0"
]

[project.scripts]
rnaflow-cli = "RNAFlow_Deliver.cli:main"

[tool.maturin]
python-source = "python"
module-name = "RNAFlow_Deliver.data_deliver_rs"