[package]
name = "data_deliver"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"
md5 = "0.7"
chrono = "0.4"
clap = { version = "4.4", features = ["derive", "string", "env"] }
indicatif = "0.17"
console = "0.15"
comfy-table = "7.0"
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
rayon = "1.8"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
ve-tos-rust-sdk = { version = "2.9.9", features = ["tokio-runtime"] }